bk_ida/gobmkida/c1/find_neighbor_dragons
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/find_neighbor_dragons/src/engine/dragon.c:1453:6: error: use of undeclared identifier 'byte_9AA88C'
if ( byte_9AA88C[j] != 3 ) 
     ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/find_neighbor_dragons/src/obj/1/dragon.o] Error 1
